📱 个人微信优化: QR码保存为图片+Web端直接展示扫码+状态实时反馈